# MuVoidClient

./: .client-build-dir  .gitignore  .gitmodules  CLIENT_CHANGELOG.md  README.md  build-all.bat  clone-mumain.bat  compile-client.bat  deploy-client.bat  start-client.bat
.github/workflows/: build-client.yml
MuVoidClient/: version.json
launcher/: LAUNCHER_CHANGELOG.md  index.html  package-lock.json  package.json  vite.config.js
launcher/src/: main.js
launcher/src-tauri/: Cargo.toml  tauri.conf.json
launcher/src-tauri/capabilities/: default.json
launcher/src-tauri/src/: http_updater.rs  lib.rs  main.rs
scripts/: apply-interface-99.bat  apply-interface-99.ps1  deploy-client.ps1  deploy-launcher.bat  deploy-launcher.ps1  generate-client-manifest.ps1  ozj-to-ozt.py  publish-client.bat  publish-client.ps1  publish-launcher.bat  publish-launcher.ps1
tools/MuVoidConfigEditor/: BuxConvert.cs  MainForm.cs  MuVoidConfigEditor.csproj  Paths.cs  Program.cs  ServerListEntry.cs  ServerListLoader.cs  publish.bat
tools/OzViewer/: HudCppExporter.cs  HudDocument.cs  HudEditorPanel.cs  HudElement.cs  HudPropertiesPanel.cs  Log.cs  MainForm.cs  OzImageLoader.cs  OzViewer.csproj  Paths.cs  Program.cs  publish.bat  run-publish.bat  run.bat
