[package]
name = "muvoid-launcher"
version = "1.0.0"
description = "MuVoid MU Online Launcher"
edition = "2021"

[lib]
name = "muvoid_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"] }
sha2 = "0.10"
